src/index.css
@import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Bungee&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Bungee&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

.heading-font {
  font-family: "Archivo Narrow", sans-serif;
}

.roboto-font {
  font-family: "Archivo Narrow", sans-serif;
}

body {
  font-family: "Roboto", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6,
button,
input,
a,
select,
textarea {
  @apply heading-font;
}

label,
input,
textarea {
  @apply text-[16px];
}

.font-italic {
  font-style: italic;
}

.yellow-shadow {
  position: relative;
  color: #0c043b;
  line-height: 100%;
  display: inline-block;
  text-shadow: 0.0125786164em 0.0377358491em 0 #ffd000,
    -0.0125786164em 0.0377358491em 0 #ffd000,
    -0.0125786164em 0.0125786164em 0 #ffd000,
    -0.0125786164em -0.0125786164em 0 #ffd000,
    0.0125786164em -0.0125786164em 0 #ffd000;
}

.yellow-croped-bg {
  width: 100%;
  background: linear-gradient(to right, #ffd24f, orange);
  clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
}

.header-main {
  max-height: 261px;
  display: flex;
  flex-flow: column;
}

.header-main > div {
  flex-grow: 1;
  align-items: flex-end;
  display: flex;
  position: relative;
  z-index: 2;
}

.header-main.big-head > div {
  align-items: center;
}

.header-main.big-head > div h1 {
  padding-bottom: 95px;
}
.header-main h1 {
  line-height: 1;
  padding-bottom: 40px;
}

.header-main.big-head > div buttons {
  bottom: 70px;
  padding: 0;
}
.header-main img {
  position: relative;
  z-index: 2;
}

.header-main:before {
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(42, 42, 42, 0.15449929971988796) 100%
  );
  content: "";
  position: absolute;
  width: 100%;
  height: 182px;
  left: 0;
  top: 0;
  z-index: 1;
}
.container-outer-lp-2 {
  padding-top: 64px;
}
.content-section {
  padding-top: 50px;
}

.wings-head {
  margin-bottom: 30px;
}
.wings-head img {
  max-width: 600px;
  padding-top: 22px;
  padding-bottom: 12px;
}

.content-below {
  margin-bottom: 70px;
}

.content-below .flex-col {
  line-height: 24px;
  gap: 24px;
}

.content-column {
  gap: 24px;
  display: flex;
  width: 100%;
}

@media only screen and (max-width: 767px) {
  .content-column {
    flex-flow: column;
  }
}

.content-column .w-full {
  display: flex;
  flex-flow: column;
  gap: 30px;
}

.content-column .w-full .items {
  display: flex;
  flex-flow: row;
  gap: 15px;
}

.content-column .w-full .items .card-info-l {
  display: flex;
  flex-flow: row;
  gap: 6px;
  color: #003767;
  font-size: 12px;
  font-weight: bold;
  padding-top: 6px;
}

.content-column .w-full .items .card-info-l svg {
  font-size: 14px;
  font-weight: bold;
  fill: #aaa99f;
  margin-top: 2px;
}

.content-column .w-full .items .card-info-r .card-info-da {
  color: #003767;
  font-size: 24px;
  font-weight: bold;
}
.content-column .w-full .items .card-info-r .card-info-ti {
  font-weight: bold;
  color: #333333;
  font-size: 22px;
}
.content-column .w-full .items .card-info-r .card-info-in {
  color: #333333;
  font-size: 13px;
}

.content-column h4 {
  font-size: 42px;
  font-weight: bold;
}

footer {
  background: url("/public/images/footer-bg.webp");
  background-repeat: no-repeat;
  background-size: cover;
}

footer .footer-bottom {
  padding-top: 23px;
  border-top: 2px solid #66b3e3;
}

footer .txt-copyright {
  color: #eaf1f2;
  font-size: 13px;
  font-family: "Roboto";
}

.font-weight-300 {
  font-weight: 300;
}

.footer-container {
  align-items: flex-end;
}

.szh-accordion__item-heading button {
  font-weight: bold;
  font-size: 20px;
}

/* Landing pages 2 */
.image-right-cont img {
  width: 666px;
  height: auto;
  z-index: 2;
  top: 0;
}
.max-w-588 {
  max-width: 588px;
}

.szh-accordion__item-heading button.text-white {
  color: #fff;
}
.szh-accordion__item-heading button {
  color: #565f5f;
}
.head-title {
  font-weight: 600;
  font-size: 42px;
  padding-bottom: 20px;
}

p a {
  text-decoration: underline;
}

.order-1 {
  order: 2;
}
.order-2 {
  order: 3;
}
@media only screen and (max-width: 767px) {
  .order-3 {
    order: 1;
  }
}

.request-form > div > .w-full {
  padding-top: 50px;
}

select,
input {
  height: 80px;
  border: none !important;
  border-radius: 0 !important;
  box-shadow: 0 0 10px rgba(1, 1, 1, 0.2) !important;
}

